@@ -1,7 +1,9 @@
 ﻿[B]Changelog[/B]
-* Fixed: SVT videos had no audio (Fixes #1143). This fix requires the InputStream Adaptvie add-on to be installed and enabled within Retrospect.
+* Fixed: some SVT streams had a very low bitrate or had weird audio (Fixes #1150)
+* Fixed: SVT Genres (Fixes #1149)
 
 [I]Previous changes[/I]
+* Fixed: SVT videos had no audio (Fixes #1143). This fix requires the InputStream Adaptvie add-on to be installed and enabled within Retrospect.
 * Fixed: TV4 thumbs not showing (Fixes #1097)
 * Added: search to UR Play (Fixes #1084).
 * Changed: UR Play now uses HTTPS.
